--- a/style.css
+++ b/style.css
@@ -1,96 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
-* {
-    box-sizing: border-box;
-    line-height: 2;
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+html, body {
+    background-color: #001e33;
+    color: #dfdfdf;
+    /*
+    font-family: 'Courier Prime', monospace;
+    font-family: 'Merriweather', serif;
+    font-family: 'Open Sans', sans-serif;
+    */
+    font-family: 'Ubuntu', sans-serif;
+    font-size: large;
+    cursor: default;
 }
 
 a {
-    color: #dfdfdf;
-}
-
-a:link, a:visited {
     text-decoration: none;
+    color: #fff;
+    transition: color 0.2s;
 }
 
-a:hover, a:active {
-    text-decoration: underline;
+a:hover {
+    color: rgba(255, 255, 255, .5);
 }
 
-html, body {
-    background-color: #373737;
-    color: #dfdfdf;
-    font-family: 'Courier Prime', monospace;
-    height: 100%;
-    margin: 0px;
+h1 {
+    font-size: xxx-large;
 }
 
-#top-container {
-    width: 100%;
-    height: 35%;
-    padding-top: 1%;
-    padding-bottom: 1%;
+/* Style page content */
+
+.main {
+    margin-left: 300px;
+    /* Same as the width of the sidebar */
+    padding: 0px 10px;
 }
 
-#image-container {
-    width: 100%;
-    height: 50%;
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
-#my-picture {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.social-link {
+    width: 50px;
+    height: 50px;
+    transition: filter 0.4s;
 }
 
-#name-container {
-    width: 100%;
-    height: 35%;
-    text-align: center;
+.social-link:hover {
+    filter: invert(0.5);
 }
 
-#occupation-container {
-    width: 100%;
-    height: 15%;
-    text-align: center;
+.country-flag {
+    height: 30px;
+    margin-bottom: 3px;
 }
 
-.content-container {
-    width: 100%;
-    height: 55%;
-    padding-top: 2%;
+.project-image {
+    transition: filter 0.4s;
 }
 
-.content {
-    float: left;
-    width: 33.3%;
-    height: 100%;
-    padding-left: 1%;
-    padding-right: 1%;
-    border-right-style: dashed;
-    border-right-width: thin;
-}
-
-.content-title {
-    text-align: center;
-    height: 14%;
-}
-
-.content-box {
-    width: 100%;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-.left-content {
-    width: 50%;
-    float: left;
-}
-
-.right-content {
-    width: 50%;
-    float: left;
-    text-align: right;
+.project-image:hover {
+    filter: brightness(0.7);
 }
