--- a/style.css
+++ b/style.css
@@ -1,102 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
-html, body {
-    background-color: #001e33;
-    color: #dfdfdf;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: large;
-    cursor: default;
+* {
+    font-family: "Open Sans", sans-serif;
+}
+
+body {
+    background-color: rgb(13, 20, 12);
+    color: white;
+}
+
+#column-holder {
+    width: 50%;
+}
+
+@media only screen and (max-width: 1000px) {
+    #column-holder {
+        width: 90%;
+    }
+}
+
+h1, h2 {
+    color: rgb(233, 214, 153);
+    font-family: "Playfair Display", serif;
+    font-weight: 700;
+}
+
+hr {
+    color: rgb(233, 214, 153);
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+p {
+    font-size: 20px;
 }
 
 a {
+    color: rgb(207, 179, 85);
     text-decoration: none;
-    color: #fff;
-    transition: color 0.2s;
 }
 
 a:hover {
-    color: rgba(255, 255, 255, .5);
+    color: rgb(13, 20, 12);
+    background-color: rgb(207, 179, 85);
 }
 
-h1 {
-    font-size: xxx-large;
-}
-
-/* Style page content */
-
-.main {
-    margin-left: 300px;
-    /* Same as the width of the sidebar */
-    padding: 0px 10px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-    .sidenav a {
-        font-size: 18px;
-    }
-}
-
-/* Scrollbar */
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-    border-radius: 3px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #004270; 
-    border-radius: 3px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #005996; 
-}
-
-/* Contact page links */
-.social-link {
-    width: 50px;
-    height: 50px;
-    transition: filter 0.4s;
-}
-
-.social-link:hover {
-    filter: invert(0.5);
-    cursor: pointer;
-}
-
-/* About Me flags */
-.country-flag {
-    height: 30px;
-    margin-bottom: 3px;
-}
-
-/* Projects images */
-.project-image {
-    transition: 0.4s;
-}
-
-.project-image:hover {
-    filter: brightness(0.7);
-}
-
-/* Publications images */
-.pub-image {
-    filter: invert(1);
-    transition: 0.4s;
-}
-
-.pub-image:hover {
-    filter: invert(0.9);
+span {
+    text-decoration: underline dashed;
 }
