--- a/style.css
+++ b/style.css
@@ -1,44 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-@font-face {
-    font-family: "Kultigin";
-    src: url("./assets/Kultigin.ttf");
+@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
+
+
+:root {
+  --background:  #141414;
+  --foreground:  #E8EAED;
+  --primary:     #419FB4;
+  --secondary:   #A5D4DF;
+  --alternative: #98A1AE;
 }
 
+
 * {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Arimo";
+    font-size: 15px;
 }
 
 body {
-    background-color: rgb(13, 20, 12);
-    color: white;
-    min-width: 530px;
+    background-color: var(--background); 
+    color: var(--foreground);
 }
 
 #column-holder {
-    width: 1000px;
-    max-width: 90%;
+    width: 40vw;
+    max-width: 90vw;
 }
 
 @media only screen and (max-width: 675px) {
     #profile {
         display: none;
     }
-}
-
-.regular-font-size {
-    font-size: 17.5px;
+    .paper-year {
+        display: none;
+    }
 }
 
 h1, h2 {
     cursor: default;
-    color: rgb(233, 214, 153);
-    font-family: "Playfair Display", serif;
-    font-weight: 900;
+    color: var(--primary);
+    font-family: "Arimo", serif;
 }
 
 hr {
-    color: rgb(233, 214, 153);
+    color: var(--primary);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
 }
 
 img {
@@ -47,24 +61,29 @@ img {
     object-fit: contain;
 }
 
+b {
+    color: var(--primary);
+}
+
 p, .content {
+    text-align: justify;
     cursor: default;
-    font-size: 17.5px;
     margin-bottom: 1rem;
 }
 
-b {
-    font-size: 20px;
+.paper-year {
+    color: var(--alternative);
+    position: absolute;
+    left: -50px;
+    text-align: right;
 }
 
 details {
     cursor: default;
-    font-size: 15px;
     font-style: italic;
 }
 
 summary {
-    font-size: 17.5px;
     font-style: normal;
     width: fit-content;
 }
@@ -74,13 +93,13 @@ summary {
 }
 
 a, summary {
-    color: rgb(207, 179, 85);
+    color: var(--secondary);
     text-decoration: none;
 }
 
 a:hover, summary:hover {
-    color: rgb(13, 20, 12);
-    background-color: rgb(207, 179, 85);
+    color: var(--background);
+    background-color: var(--secondary);
 }
 
 .horizlink {
@@ -92,15 +111,9 @@ a:hover, summary:hover {
 }
 
 #profile {
-    width: 200px;
-    height: 200px;
+    width: 8vw;
+    height: 8vw;
     border-style: solid;
     border-width: 2px;
-    border-color: rgb(233, 214, 153);
-}
-
-#background-text {
-    font-family: "Kultigin";
-    overflow-wrap: break-word;
-    overflow: hidden;
+    border-color: var(--primary);
 }
