--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
 * {
     font-family: "Arimo";
-    font-size: 15px;
+    font-size: 17px;
 }
 
 body {
@@ -41,7 +41,7 @@ body {
     }
 }
 
-h1, h2 {
+h1, h2, h3 {
     cursor: default;
     color: var(--primary);
     font-family: "Arimo", serif;
